# schema-library

./: .gitignore  .markdownlint.yaml  .markdownlintignore  .metadata.yml  .vale.ini  .yamllint.yml  README.md  find_cycles.py  pyproject.toml  tasks.old  tasks.py
.github/: build-docs.sh  file-filters.yml  labels.yml
.github/workflows/: ci.yml  main.yml  sync-docs.yml
base/: .metadata.yml  .schema.yml  README.md  dcim.yml  ipam.yml  location.yml  organization.yml
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/_templates/: home_page.j2  reference.j2  schema_reference.j2
docs/docs/: contributing.mdx  home.mdx  readme.mdx  schema-library.mdx
experimental/azure/: .metadata.yml  .schema.yml  README.md  azure.yml
experimental/circuit_service/: .metadata.yml  .schema.yml  README.md  circuit_service.yml
experimental/cisco_netascode/: README.md  cisco_netascode.yml
experimental/epipe/: README.md  epipe-templates.yml  epipe.yml
experimental/infiniband/: .metadata.yml  .schema.yml  README.md  infiniband.yml
experimental/location_extended/: .metadata.yml  .schema.yml  README.md  location_extended.yml
experimental/modules_linecards/: README.md  linecard.yml
experimental/modules_routing_engine/: README.md  routing_engine.yml
experimental/optical_transport/: README.md  equipment.yml  optical_transport.yml  service.yml  topology.yml  wavelength.yml
experimental/peering/: .schema.yml  README.md
experimental/qos/: .metadata.yml  .schema.yml  README.md  qos.yml
experimental/security/: .metadata.yml  .schema.yml  README.md  security.yml
experimental/tenancy/: .metadata.yml  .schema.yml  README.md
experimental/topology/: .metadata.yml  .schema.yml  README.md  topology.yml
experimental/vlan-translation/: .schema.yml  README.md
extensions/bgp/: .metadata.yml  README.md  bgp.yml
extensions/cable/: .metadata.yml  README.md  cable.yml
extensions/circuit/: .metadata.yml  .schema.yml  README.md  circuit.yml
extensions/circuit_contract/: README.md  circuit_contract.yml
extensions/circuit_service/: circuit_service.yml
extensions/cluster/: .schema.yml  README.md  cluster.yml
extensions/compute/: .metadata.yml  .schema.yml  README.md  compute.yml
extensions/cross_connect/: .schema.yml  README.md  cross_connect.yml
extensions/dwdm/: .metadata.yml  .schema.yml  README.md  dwdm.yml
extensions/firewall_policer/: .schema.yml  README.md  firewall_policer.yml
extensions/hosting_cluster/: .schema.yml  README.md
extensions/interface_breakout/: README.md  interface_breakout.yml
extensions/lag/: README.md  lag.yml
extensions/location_minimal/: .metadata.yml  README.md  location_minimal.yml
extensions/meet_me_room/: README.md  meet_me_room.yml
extensions/mlag/: README.md  mlag.yml
extensions/modules/: README.md  modules.yml
extensions/modules_linecards/: README.md  linecard.yml
extensions/modules_routing_engine/: README.md
extensions/network_cluster/: README.md  cluster.yml
extensions/patch_panel/: .metadata.yml  .schema.yml  README.md  patch_panel.yml
extensions/peering_ixp/: README.md  peering_ixp.yml
extensions/physical_disk/: .metadata.yml  .schema.yml  README.md  physical_disk.yml
extensions/qinq/: .schema.yml  README.md  qinq.yaml
extensions/routing/: README.md  routing.yml
extensions/routing_aggregate/: README.md
extensions/routing_bgp/: README.md  bgp.yml
extensions/routing_bgp_community/: README.md  bgp_community.yml
extensions/routing_bgp_rr/: README.md  bgp_rr.yml
extensions/routing_ospf/: README.md  ospf.yml
extensions/routing_pim/: README.md  pim.yml
extensions/routing_policies/: README.md  routing_policies.yml
extensions/routing_policies_aggregate/: README.md
extensions/routing_policies_bgp/: README.md
extensions/routing_policies_ospf/: README.md
extensions/routing_policies_pim/: README.md
extensions/sfp/: .metadata.yml  README.md  sfp.yml
extensions/snmp/: .metadata.yml  .schema.yml  README.md  snmp.yml
extensions/topology/: .metadata.yml  README.md  (+1 more)
tasks/: __init__.py  docs.py  docusaurus.py  linter.py  schemas.py
(+71 files in other folders)
